--- a/output/tables/abccare/rslt_female_main1.tex
+++ b/output/tables/abccare/rslt_female_main1.tex
@@ -1,10 +1,9 @@
   \begin{tabular}{cccccccccc}
   \toprule
+  
+      \scriptsize{Variable} & \scriptsize{Age} & \scriptsize{(1)} & \scriptsize{(2)} & \scriptsize{(3)} & \scriptsize{(4)} & \scriptsize{(5)} & \scriptsize{(6)} & \scriptsize{(7)} & \scriptsize{(8)} \\     \midrule  
 
-    \scriptsize{Variable} & \scriptsize{Age} & \scriptsize{(1)} & \scriptsize{(2)} & \scriptsize{(3)} & \scriptsize{(4)} & \scriptsize{(5)} & \scriptsize{(6)} & \scriptsize{(7)} & \scriptsize{(8)} \\ 
-    \midrule  
-
-    \mc{1}{l}{\scriptsize{Std. IQ Test}} & \mc{1}{c}{\scriptsize{12}} & \mc{1}{c}{\scriptsize{8.259}} & \mc{1}{c}{\scriptsize{10.139}} & \mc{1}{c}{\scriptsize{8.100}} & \mc{1}{c}{\scriptsize{9.130}} & \mc{1}{c}{\scriptsize{7.690}} & \mc{1}{c}{\scriptsize{8.181}} & \mc{1}{c}{\scriptsize{10.271}} & \mc{1}{c}{\scriptsize{7.520}} \\  
+ \mc{1}{l}{\scriptsize{Std. IQ Test}} & \mc{1}{c}{\scriptsize{12}} & \mc{1}{c}{\scriptsize{8.259}} & \mc{1}{c}{\scriptsize{10.139}} & \mc{1}{c}{\scriptsize{8.100}} & \mc{1}{c}{\scriptsize{9.130}} & \mc{1}{c}{\scriptsize{7.690}} & \mc{1}{c}{\scriptsize{8.181}} & \mc{1}{c}{\scriptsize{10.271}} & \mc{1}{c}{\scriptsize{7.520}} \\  
 
      &  & \mc{1}{c}{\scriptsize{\textbf{(0.013)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.026)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.013)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.026)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.026)}}} \\  
 
@@ -31,18 +30,6 @@
     \mc{1}{l}{\scriptsize{Employed}} & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{0.110}} & \mc{1}{c}{\scriptsize{0.063}} & \mc{1}{c}{\scriptsize{0.250}} & \mc{1}{c}{\scriptsize{0.333}} & \mc{1}{c}{\scriptsize{0.256}} & \mc{1}{c}{\scriptsize{0.045}} & \mc{1}{c}{\scriptsize{0.024}} & \mc{1}{c}{\scriptsize{0.058}} \\  
 
      &  & \mc{1}{c}{\scriptsize{(0.105)}} & \mc{1}{c}{\scriptsize{(0.250)}} & \mc{1}{c}{\scriptsize{(0.105)}} & \mc{1}{c}{\scriptsize{\textbf{(0.079)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.092)}}} & \mc{1}{c}{\scriptsize{(0.303)}} & \mc{1}{c}{\scriptsize{(0.382)}} & \mc{1}{c}{\scriptsize{(0.289)}} \\  
-
-    \mc{1}{l}{\scriptsize{Total Felony Arrests}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.266}} & \mc{1}{c}{\scriptsize{-0.313}} & \mc{1}{c}{\scriptsize{-0.917}} & \mc{1}{c}{\scriptsize{-0.861}} & \mc{1}{c}{\scriptsize{-0.854}} & \mc{1}{c}{\scriptsize{-0.050}} & \mc{1}{c}{\scriptsize{-0.111}} & \mc{1}{c}{\scriptsize{0.002}} \\  
-
-     &  & \mc{1}{c}{\scriptsize{(0.171)}} & \mc{1}{c}{\scriptsize{\textbf{(0.092)}}} & \mc{1}{c}{\scriptsize{(0.105)}} & \mc{1}{c}{\scriptsize{(0.145)}} & \mc{1}{c}{\scriptsize{\textbf{(0.092)}}} & \mc{1}{c}{\scriptsize{(0.276)}} & \mc{1}{c}{\scriptsize{(0.224)}} & \mc{1}{c}{\scriptsize{(0.513)}} \\  
-
-    \mc{1}{l}{\scriptsize{Total Misdemeanor Arrests}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.918}} & \mc{1}{c}{\scriptsize{-1.154}} & \mc{1}{c}{\scriptsize{-2.345}} & \mc{1}{c}{\scriptsize{-1.959}} & \mc{1}{c}{\scriptsize{-2.560}} & \mc{1}{c}{\scriptsize{-0.475}} & \mc{1}{c}{\scriptsize{-0.553}} & \mc{1}{c}{\scriptsize{-0.175}} \\  
-
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.079)}}} & \mc{1}{c}{\scriptsize{(0.132)}} & \mc{1}{c}{\scriptsize{\textbf{(0.092)}}} & \mc{1}{c}{\scriptsize{(0.171)}} & \mc{1}{c}{\scriptsize{(0.105)}} & \mc{1}{c}{\scriptsize{(0.158)}} & \mc{1}{c}{\scriptsize{(0.197)}} & \mc{1}{c}{\scriptsize{(0.250)}} \\  
-
-    \mc{1}{l}{\scriptsize{Total Years Incarcerated}} & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{-0.020}} & \mc{1}{c}{\scriptsize{-0.012}} &  &  &  & \mc{1}{c}{\scriptsize{-0.030}} & \mc{1}{c}{\scriptsize{-0.015}} & \mc{1}{c}{\scriptsize{-0.031}} \\  
-
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.039)}}} & \mc{1}{c}{\scriptsize{(0.171)}} &  &  &  & \mc{1}{c}{\scriptsize{\textbf{(0.026)}}} & \mc{1}{c}{\scriptsize{(0.145)}} & \mc{1}{c}{\scriptsize{\textbf{(0.039)}}} \\  
 
   \bottomrule
   \end{tabular}
